--- a/templates/page.html
+++ b/templates/page.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% import "svgs.html" as svgs %}
 
+{% block title %}{{ page.title }} - {{ config.title }}{% endblock title %}
+
 {% block content %}
 <section class="pt-32 pb-20 px-4 sm:px-6 lg:px-8 max-w-4xl mx-auto min-h-screen">
     <div class="mb-12">
@@ -10,9 +12,8 @@
         </a>
         <h1 class="text-4xl font-bold text-white mb-6 tracking-tight">{{ page.title }}</h1>
     </div>
-    
-    <div class="prose prose-invert prose-indigo prose-lg max-w-none text-slate-400">
+    <article class="prose prose-invert prose-indigo prose-lg max-w-none text-slate-400">
         {{ page.content | safe }}
-    </div>
+    </article>
 </section>
 {% endblock content %}
